--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,6 +1,4 @@
 #contact {
-  margin-top: 2rem;
-  margin-bottom: 2.5rem;
   /*center in container*/
   display: flex;
   flex-direction: column;
