--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,12 +1,13 @@
 #projects {
-    margin-bottom: 8rem;
-    max-width: 1200px;
+  
 }
 #projects h2{
     text-align: center;
     margin-bottom: 2rem;
 }
 .projects-container {
+    max-width: 1200px;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem 1.5rem;
