--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,6 +1,5 @@
 #skills {
-    padding: 4rem;
-    margin-bottom: 2rem;
+ 
 }
 
 #skills h2{
